--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>몽치치 어드벤처 - 사고뭉치민 일지</title>
+    <title>사고뭉치민 일지</title>
     <style>
         * {
             margin: 0;
@@ -945,3 +945,4 @@ function isNearBoard() {
     </script>
 </body>
 </html>
+
